fix: Fix registration CSS applying to task list
fix: Fix registration CSS applying to task list

* A CSS line from registration.css was overriding a CSS line from index.css, causing the tasks in the task list to look weird

--- a/front-end/src/pages/registration.css
+++ b/front-end/src/pages/registration.css
@@ -20,7 +20,7 @@ Form {
 .errorMsg {
   color: red;
 }
-Label {
+.registration-label {
   padding: 5px;
 }
 .regButton {
